--- a/Praca_Inzynierska/InzynierskaPracaDyplomowa_MateuszBartosz_2017.tex
+++ b/Praca_Inzynierska/InzynierskaPracaDyplomowa_MateuszBartosz_2017.tex
@@ -209,7 +209,9 @@
 \end{tabular}
 \end{table}
 		
-		\subsubsection{Struktura wysyłanych zapytań}
+		\subsubsection{Tryby pracy złącza diagnostycznego}
+		
+		DO UZUPEŁNIENIA PÓŹNIEJ
 		
 		\hspace{0.5cm}Przy użyciu złącza diagnostycznego można odpytywać komputer pokładowy parametry z dziesięciu podgrup wybierając odpowiedni tryb. Tryby wybierane są za pomocą wysłania w żądaniu odpowiedniej liczby zapisanej w postaci szesnastkowej do złącza diagnostycznego. W tabeli \ref{tab_pid_modes} przedstawionych jest dziesięć modów opisanych w normie SAE J1979.
 		
@@ -238,12 +240,22 @@
 		
 		\subsubsection{Struktura kodów błędów}
 		
+		DO UZUPEŁNIENIA PÓŹNIEJ	
 	
 		\newpage	
 	
 	\subsection{Protokoły komunikacyjne dostępne w złączu diagnostycznym}
-		\hspace{0.5cm}GŁÓWNIE TE Z OBD LIN, ISO9141-2, CAN,
-						te nowsze
+		\hspace{0.5cm}Zgodnie z normą SAE J1962 do złącza diagnostycznego doprowadzone może być pięć różnych magistral danych które udostępniają następujące protokołu komunikacji:
+		
+		\begin{itemize}
+			\item{SAE J1850 PWM,}
+			\item{SAE J1850 VPW,}
+			\item{CAN,}
+			\item{ISO 9141,}
+			\item{ISO 14230 - KWP2000.}
+		\end{itemize}
+		
+		
 	
 		\newpage	
 	
